Fix Left Align Button

--- a/app/assets/stylesheets/refinery/home.scss
+++ b/app/assets/stylesheets/refinery/home.scss
@@ -53,6 +53,8 @@
           text-decoration: none;
 
           + * { margin-left: .8rem; }
+
+          @include media(medium) { margin-left: 0; }
         }
       }
 
